user-service/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: backend
  labels:
    app: user-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: backend
          image: ghcr.io/어딘가에 있는,, 우리 컨테이너..
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: backend
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
